--- a/summeryjobwise.html
+++ b/summeryjobwise.html
@@ -100,6 +100,15 @@ tbody tr:hover {
 @media print {
   .header-bar, .controls { display: none; }
 }
+  /* ===== FIX DATE COLUMN WIDTH ===== */
+#resultTable th:nth-child(4),
+#resultTable td:nth-child(4) {
+  width: 120px;
+  min-width: 120px;
+  white-space: nowrap;
+  text-align: center;
+}
+
 </style>
 </head>
 
