--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -21,16 +20,15 @@ body { font-family: Arial, sans-serif; margin: 0; background: #f2f6ff; }
 .header-title small { display: block; font-size: 15px; font-weight: 600; }
 
 .icon-btn {
-  background: #ffffff;        /* WHITE BUTTON */
-  color: #003f88;             /* BLUE ICON */
-  border: 1px solid #003f88;  /* BLUE BORDER */
+  background: #ffffff;
+  color: #003f88;
+  border: 1px solid #003f88;
   border-radius: 8px;
   padding: 10px 12px;
   font-size: 18px;
   cursor: pointer;
   font-weight: bold;
 }
-
 
 .container { padding: 20px; }
 
@@ -58,17 +56,14 @@ body { font-family: Arial, sans-serif; margin: 0; background: #f2f6ff; }
   cursor: pointer;
 }
 
-/* ===== MOBILE SIDE-BY-SIDE ACTION BUTTONS ===== */
 @media(max-width:768px){
   .grid { grid-template-columns: 1fr; }
-
   .action-row {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 12px;
     margin-top: 18px;
   }
-
   .action-row .action-btn {
     margin-top: 0;
     width: 100%;
@@ -101,12 +96,20 @@ const HISTORY_YEARS = [2026,2025,2024,2023,2022,2021,2020,2019];
 const HISTORY_BASE =
   "https://raw.githubusercontent.com/08electricaldata/08electricaldata-json/main/history/";
 
+/* ===== NORMALIZE (🔥 FIX) ===== */
+function normalize(v){
+  return String(v || "")
+    .replace(/[–—?]/g, "-")
+    .toUpperCase()
+    .trim();
+}
+
 function goHome(){ location.href="https://08electricaldata.github.io/"; }
 function goBack(){ history.back(); }
 
-/* ===== ADD JOB REDIRECT (NEW) ===== */
+/* ===== ADD JOB ===== */
 function addJob(){
-  const id = new URLSearchParams(location.search).get("id");
+  const id = normalize(new URLSearchParams(location.search).get("id"));
   if(!id) return;
   location.href =
     "https://08electricaldata.github.io/qrsubmit.html?id=" +
@@ -135,43 +138,45 @@ async function lastDates(id,map){
     try{
       const j = await (await fetch(HISTORY_BASE + y + ".json")).json();
       j.rows.forEach(r=>{
-        if(`${r[2]}-${r[3]}`.toUpperCase() !== id) return;
-        const job = (r[7] || "").toUpperCase().trim();
+        if(normalize(`${r[2]}-${r[3]}`) !== id) return;
+
+        const job = normalize(r[7]);
         const d = parseDate(r[4]);
+
         Object.entries(map).forEach(([k,v])=>{
-          if(job === v && (!res[k] || d > res[k])) res[k] = d;
+          if(job === normalize(v) && (!res[k] || d > res[k])) {
+            res[k] = d;
+          }
         });
       });
     }catch(e){}
   }
 
-  Object.keys(res).forEach(k => res[k] = res[k] ? fmt(res[k]) : "NO RECORDS");
+  Object.keys(res).forEach(
+    k => res[k] = res[k] ? fmt(res[k]) : "NO RECORDS"
+  );
   return res;
 }
 
 async function loadData(){
-  const id = new URLSearchParams(location.search).get("id");
+  const id = normalize(new URLSearchParams(location.search).get("id"));
   if(!id) return;
 
   const j = await (await fetch(DRIVE_JSON)).json();
-  const c = j.rows.find(r => `${r[1]}-${r[2]}`.toUpperCase() === id.toUpperCase());
+  const c = j.rows.find(
+    r => normalize(`${r[1]}-${r[2]}`) === id
+  );
 
   if(!c){
     content.innerHTML = "<div class='card'>Data Not Found</div>";
     return;
   }
 
-  const TYPE = (c[1] || "").toUpperCase().trim();
+  const TYPE = normalize(c[1]);
 
-  if(TYPE === "TRANSFORMER"){
-    showTransformer(c, id.toUpperCase());
-  }
-  else if(TYPE === "BREAKER"){
-    showBreaker(c, id.toUpperCase());
-  }
-  else{
-    showMotor(c, id.toUpperCase());
-  }
+  if(TYPE === "TRANSFORMER") showTransformer(c,id);
+  else if(TYPE === "BREAKER") showBreaker(c,id);
+  else showMotor(c,id);
 }
 
 /* ================= MOTOR ================= */
@@ -186,7 +191,6 @@ async function showMotor(c,id){
   content.innerHTML = `
   <div class="card">
     <h3>${c[1]} – ${c[2]}</h3>
-
     <div class="grid">
       <p><span class="label">Rating:</span> ${c[5]} KW</p>
       <p><span class="label">FLC:</span> ${c[10]} A</p>
@@ -226,7 +230,6 @@ async function showTransformer(c,id){
   content.innerHTML = `
   <div class="card">
     <h3>Transformer – ${c[2]}</h3>
-
     <div class="grid">
       <p><span class="label">TR Sl No:</span> ${c[3]}</p>
       <p><span class="label">Make:</span> ${c[4]}</p>
@@ -258,7 +261,6 @@ async function showBreaker(c,id){
   content.innerHTML = `
   <div class="card">
     <h3>Breaker – ${c[2]}</h3>
-
     <div class="grid">
       <p><span class="label">Compartment No:</span> ${c[3]}</p>
       <p><span class="label">Breaker Desc:</span> ${c[4]}</p>
@@ -279,7 +281,7 @@ async function showBreaker(c,id){
 }
 
 function openHistory(){
-  const id = new URLSearchParams(location.search).get("id");
+  const id = normalize(new URLSearchParams(location.search).get("id"));
   location.href =
     "https://08electricaldata.github.io/drive-viewer/history.html?id=" +
     encodeURIComponent(id);
