--- a/index.html
+++ b/index.html
@@ -144,11 +144,13 @@ select {
   </div>
 
   <!-- ROW 2 (NEW) -->
-  <div class="button-row">
-    <button onclick="secureOpen('advanced')">📊 Advanced Summary</button>
-    <button onclick="openJob1()">📘 Job1 Summary</button>
-    <button onclick="openJob2()">📕 Job2 Summary</button>
-  </div>
+<!-- ROW 2 -->
+<div class="button-row" style="justify-content:center;">
+  <button onclick="secureOpen('advanced')">📊 Advanced Summary</button>
+  <button onclick="openJob1()">📘 Job1 Summary</button>
+  <button onclick="openJob2()">📕 Job2 Summary</button>
+</div>
+
 </div>
 
 <!-- JOBS -->
