--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ body {
   margin: 0;
 }
 
+/* HEADER */
 .header {
   background: #003f88;
   color: white;
@@ -22,6 +23,7 @@ body {
 .header p { margin-top: 8px; font-size: 18px; opacity: 0.95; }
 .header .credit { margin-top: 6px; font-size: 16px; font-weight: 500; }
 
+/* LAYOUT */
 .container {
   max-width: 1200px;
   margin: 30px auto;
@@ -44,6 +46,7 @@ body {
   text-align: center;
 }
 
+/* BUTTONS */
 .master-btns,
 .jobs-btns {
   display: flex;
@@ -63,6 +66,7 @@ button {
 }
 button:hover { opacity: 0.9; }
 
+/* SELECT */
 .select-row {
   display: flex;
   gap: 15px;
@@ -78,6 +82,7 @@ select {
   min-width: 260px;
 }
 
+/* BUTTON ROWS */
 .button-row {
   margin-top: 20px;
   display: flex;
@@ -90,6 +95,7 @@ select {
   min-width: 150px;
 }
 
+/* FOOTER */
 .footer {
   text-align: center;
   padding: 15px;
@@ -97,6 +103,7 @@ select {
   color: #555;
 }
 
+/* RESPONSIVE */
 @media (max-width: 1000px) {
   .container { grid-template-columns: 1fr; }
 }
@@ -173,89 +180,114 @@ select {
 const JSON_URL =
   "https://raw.githubusercontent.com/08electricaldata/08electricaldata-json/main/dropdown/drives.json";
 
-let headers=[], rows=[], sheetPassword="";
+let headers = [], rows = [], sheetPassword = "";
 
+/* LOAD JSON */
 async function loadSheet(){
-  const cache=localStorage.getItem("driveJSON");
+  const cache = localStorage.getItem("driveJSON");
   if(cache){
-    const d=JSON.parse(cache);
-    headers=d.headers; rows=d.rows;
-    sheetPassword=String(headers[6]||"").trim();
-    buildMain(); return;
+    const d = JSON.parse(cache);
+    headers = d.headers;
+    rows = d.rows;
+    sheetPassword = String(headers[6] || "").trim();
+    buildMain();
+    return;
   }
-  const d=await (await fetch(JSON_URL)).json();
-  headers=d.headers; rows=d.rows;
-  sheetPassword=String(headers[6]||"").trim();
-  localStorage.setItem("driveJSON",JSON.stringify(d));
+  const d = await (await fetch(JSON_URL)).json();
+  headers = d.headers;
+  rows = d.rows;
+  sheetPassword = String(headers[6] || "").trim();
+  localStorage.setItem("driveJSON", JSON.stringify(d));
   buildMain();
 }
 
+/* PASSWORD */
 function checkPassword(){
-  if(!sheetPassword){ alert("⏳ Data loading"); return false; }
-  const p=prompt("🔐 Enter Password");
-  if(p===null) return false;
-  if(p.trim()!==sheetPassword){ alert("❌ Incorrect password"); return false; }
+  if(!sheetPassword){
+    alert("⏳ Data loading");
+    return false;
+  }
+  const p = prompt("🔐 Enter Password");
+  if(p === null) return false;
+  if(p.trim() !== sheetPassword){
+    alert("❌ Incorrect password");
+    return false;
+  }
   return true;
 }
 
+/* BUILD MAIN DRIVE */
 function buildMain(){
-  const m=document.getElementById("mainDrive");
-  m.innerHTML="<option value=''>Select Main Drive</option>";
+  const m = document.getElementById("mainDrive");
+  m.innerHTML = "<option value=''>Select Main Drive</option>";
   headers.forEach((h,i)=>{
-    if(i<7||!h) return;
-    const o=document.createElement("option");
-    o.value=i; o.textContent=h;
+    if(i < 7 || !h) return;
+    const o = document.createElement("option");
+    o.value = i;
+    o.textContent = h;
     m.appendChild(o);
   });
 }
 
-document.getElementById("mainDrive").onchange=function(){
-  const sub=document.getElementById("subDrive");
-  sub.innerHTML="<option value=''>Select Sub Drive</option>";
+/* SUB DRIVE */
+document.getElementById("mainDrive").onchange = function(){
+  const sub = document.getElementById("subDrive");
+  sub.innerHTML = "<option value=''>Select Sub Drive</option>";
   if(!this.value) return;
   rows.forEach(r=>{
     if(r[this.value]){
-      const o=document.createElement("option");
-      o.value=r[this.value];
-      o.textContent=r[this.value];
+      const o = document.createElement("option");
+      o.value = r[this.value];
+      o.textContent = r[this.value];
       sub.appendChild(o);
     }
   });
 };
 
+/* VIEW / HISTORY */
 function secureView(type){
   if(!checkPassword()) return;
-  const m=document.getElementById("mainDrive");
-  const s=document.getElementById("subDrive");
-  if(!m.value||!s.value){ alert("Select drives"); return; }
-  const id=m.selectedOptions[0].text+"-"+s.value;
-  const base=type==="view"
-    ?"drive-viewer/index.html?id="
-    :"drive-viewer/history.html?id=";
-  location.href="https://08electricaldata.github.io/"+base+encodeURIComponent(id);
+  const m = document.getElementById("mainDrive");
+  const s = document.getElementById("subDrive");
+  if(!m.value || !s.value){
+    alert("Please select Main Drive and Sub Drive");
+    return;
+  }
+  const id = m.selectedOptions[0].text + "-" + s.value;
+  const base = type === "view"
+    ? "drive-viewer/index.html?id="
+    : "drive-viewer/history.html?id=";
+  location.href =
+    "https://08electricaldata.github.io/" +
+    base +
+    encodeURIComponent(id);
 }
 
+/* OPEN STATIC PAGES */
 function secureOpen(type){
   if(!checkPassword()) return;
-  const map={
-    motor:"drive-viewer/motorlist.html",
-    trafo:"drive-viewer/trafolist.html",
-    breaker:"drive-viewer/breakerlist.html",
-    advanced:"drive-viewer/summary-advanced.html",
-    motoroh:"drive-viewer/motoroh.html",
-    motorpm:"drive-viewer/motorpm.html",
-    jobentry:"jobsubmit.html"
+  const map = {
+    motor: "drive-viewer/motorlist.html",
+    trafo: "drive-viewer/trafolist.html",
+    breaker: "drive-viewer/breakerlist.html",
+    advanced: "drive-viewer/summary-advanced.html",
+    motoroh: "drive-viewer/motoroh.html",
+    motorpm: "drive-viewer/motorpm.html",
+    jobentry: "jobsubmit.html"
   };
-  location.href="https://08electricaldata.github.io/"+map[type];
+  location.href = "https://08electricaldata.github.io/" + map[type];
 }
 
+/* JOB SUMMARIES */
 function openJob1(){
   if(!checkPassword()) return;
-  location.href="https://08electricaldata.github.io/drive-viewer/summeryjobwise1.html";
+  location.href =
+    "https://08electricaldata.github.io/drive-viewer/summeryjobwise1.html";
 }
 function openJob2(){
   if(!checkPassword()) return;
-  location.href="https://08electricaldata.github.io/drive-viewer/summeryjobwise.html";
+  location.href =
+    "https://08electricaldata.github.io/drive-viewer/summeryjobwise.html";
 }
 
 loadSheet();
