--- a/summeryjobwise.html
+++ b/summeryjobwise.html
@@ -115,8 +115,8 @@ tbody tr:hover {
 <body>
 
 <div class="header-bar">
-  <button onclick="goHome()">🏠</button>
-  <button onclick="history.back()">🔁</button>
+  <button onclick="goHome()">🏠 Home</button>
+  <button onclick="history.back()">⬅ Back</button>
   <div class="header-title">Jobwise History</div>
 </div>
 
