--- a/motoroh.html
+++ b/motoroh.html
@@ -166,8 +166,8 @@ tbody tr:hover {
 <div class="header">
   <div class="header-bar">
     <div class="header-left">
-      <button class="header-btn" onclick="goHome()" title="Home">🏠</button>
-      <button class="header-btn" onclick="goBack()" title="Back">🔁</button>
+      <button class="header-btn" onclick="goHome()" title="Home">🏠 Home</button>
+      <button class="header-btn" onclick="goBack()" title="Back">⬅ Back</button>
     </div>
 
     <div class="header-center">
