--- a/motorpm.html
+++ b/motorpm.html
@@ -151,8 +151,8 @@ tbody tr:hover {
 <div class="header">
   <div class="header-bar">
     <div class="header-left">
-      <button class="header-btn" onclick="goHome()">🏠</button>
-      <button class="header-btn" onclick="goBack()">🔁</button>
+      <button class="header-btn" onclick="goHome()">🏠 Home</button>
+      <button class="header-btn" onclick="goBack()">⬅ Back</button>
     </div>
 
     <div class="header-center">
